@startuml "Engine And Fuel Tank"
skinparam classAttributeIconSize 0

interface ICar
{
  + //EngineIsRunning : bool { get }//
  + //EngineStart() : void//
  + //EngineStop() : void//
  + //Refuel(liters : double) : void//
  + //RunningIdle() : void//
}

interface IEngine
{
  + //IsRunning : bool { get }//
  + //Consume(liters : double) : void//
  + //Start() : void//
  + //Stop() : void//
}

interface IFuelTank
{
  + //FillLevel : double { get }//
  + //IsOnReserve : bool { get }//
  + //IsComplete : bool { get }//
  + //Consume(liters : double) : void//
  + //Refuel(liters : double) : void//
}

interface IFuelTankDisplay
{
  + //FillLevel : double { get }//
  + //IsOnReserve : bool { get }//
  + //IsComplete : bool { get }//
}

class Car
{
  + fuelTankDisplay : IFuelTankDisplay
  - engine : IEngine
  - fuelTank : IFuelTank

  + EngineIsRunning : bool { get }

  + Car(fuelLevel : double)
  + Car()

  + EngineStart() : void
  + EngineStop() : void
  + Refuel(liters : double) : void
  + RunningIdle() : void
}

class Engine
{
  - fuelTank : IFuelTank

  + IsRunning : bool { get }

  + Engine(fuelTank : IFuelTank)

  + Consume(liters : double) : void
  + Start() : void
  + Stop() : void
}

class FuelTank
{
  + FillLevel : double { get }
  + IsOnReserve : bool { get }
  + IsComplete : bool { get }

  + Consume(liters : double) : void
  + Refuel(liters : double) : void
}

class FuelTankDisplay
{
  - fuelTank : IFuelTank

  + FillLevel : double { get }
  + IsOnReserve : bool { get }
  + IsComplete : bool { get }

  + FuelTankDisplay(fuelTank : IFuelTank)
} 

ICar <|.. Car
Car o--- IFuelTankDisplay
Car o--- IEngine
Car o--- IFuelTank

IEngine <|.. Engine
Engine o-- IFuelTank

IFuelTank <|.. FuelTank

IFuelTankDisplay <|.. FuelTankDisplay
FuelTankDisplay o-- IFuelTank

note right of Car::Car
Car(fuelLevel : double)
{
  fuelTank = **new** FuelTank();
  engine = **new** Engine(fuelTank);
  fuelTankDisplay = **new** FuelTankDisplay(fuelTank);

  fuelTank.Refuel(fuelLevel);
}
end note


@enduml